--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="en" ng-app="bestHotels">
+ <html lang="en" ng-app="hotelsApp">
  <head>
    <meta charset="UTF-8">
    <title>Document</title>
