--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="en" ng-app="hotelsApp">
+ <html lang="en" ng-app="hotelsApp" ng-cloak>
  <head>
    <meta charset="UTF-8">
    <title>Document</title>
@@ -7,18 +7,17 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-   <link rel="stylesheet" href="/css/style.css">
    
    <!-- Optional theme -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
    
    <!-- Latest compiled and minified JavaScript -->
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="/css/style.css">
  </head>
  <body>
   <div ng-view>
-
-  <div>
+  </div>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
