--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -3,6 +3,9 @@
  <head>
    <meta charset="UTF-8">
    <title>Document</title>
+   
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
    <base href="/">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    <!-- Latest compiled and minified CSS -->
@@ -21,9 +24,11 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
+  <script src="http://code.angularjs.org/1.4.5/angular-animate.min.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/controllers.js"></script>
+  <script src="/js/directive.js"></script>
 
  </body>
  </html> 
