adding viual range slider

--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -17,18 +17,26 @@
    <!-- Latest compiled and minified JavaScript -->
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
    <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/css/rangeslider.css">
+   <!-- sliders -->
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css">
+
+
  </head>
  <body>
   <div ng-view>
   </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
   <script src="http://code.angularjs.org/1.4.5/angular-animate.min.js"></script>
+  <!-- for sliders -->
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/directive.js"></script>
+  <script src="/js/rangeslider.js"></script>
 
  </body>
  </html> 
