displaying multipe images after serach for a hotel

--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -21,6 +21,12 @@
    <!-- sliders -->
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css">
 
+  <script>
+  UPLOADCARE_LOCALE = "en";
+  UPLOADCARE_TABS = "file url facebook gdrive dropbox instagram evernote flickr skydrive box vk";
+  UPLOADCARE_PUBLIC_KEY = "4b66182859ad52a18eb0";
+ </script>
+
 
  </head>
  <body>
@@ -32,6 +38,13 @@
   <script src="http://code.angularjs.org/1.4.5/angular-animate.min.js"></script>
   <!-- for sliders -->
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  
+  <!-- uploadcare -->
+  <script charset="utf-8" src="//ucarecdn.com/widget/2.5.9/uploadcare/uploadcare.full.min.js"></script>
+
+
+  <!-- uploadcare -->
+  <script src="/js/angular-uploadcare.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/controllers.js"></script>
