Add email password and facebook auth strategies

--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -34,6 +34,7 @@
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
+  <script src="http://cdn.jsdelivr.net/satellizer/0.13.3/satellizer.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
   <script src="http://code.angularjs.org/1.4.5/angular-animate.min.js"></script>
   <!-- for sliders -->
