--- a/best_hotels/client/index.html
+++ b/best_hotels/client/index.html
@@ -5,6 +5,8 @@
    <title>Document</title>
    
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- google maps -->
+   <script src="https://maps.googleapis.com/maps/api/js"></script>
    
    <base href="/">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -41,7 +43,8 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   
   <!-- uploadcare -->
-  <!--<script charset="utf-8" src="//ucarecdn.com/widget/2.5.9/uploadcare/uploadcare.full.min.js"></script> -->
+  <script charset="utf-8" src="//ucarecdn.com/widget/2.5.9/uploadcare/uploadcare.full.min.js">
+  </script> 
 
 
   <!-- uploadcare -->
