--- a/client/index.html
+++ b/client/index.html
@@ -34,11 +34,11 @@
   <div ng-view>
     
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
-  <script src="http://cdn.jsdelivr.net/satellizer/0.13.3/satellizer.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
-  <script src="http://code.angularjs.org/1.4.5/angular-animate.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
+  <script src="//cdn.jsdelivr.net/satellizer/0.13.3/satellizer.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.js"></script>
+  <script src="//code.angularjs.org/1.4.5/angular-animate.min.js"></script>
   <!-- for sliders -->
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   
