--- a/client/index.html
+++ b/client/index.html
@@ -43,8 +43,8 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   
   <!-- uploadcare -->
-  <script charset="utf-8" src="//ucarecdn.com/widget/2.5.9/uploadcare/uploadcare.full.min.js">
-  </script> 
+  <!-- <script charset="utf-8" src="//ucarecdn.com/widget/2.5.9/uploadcare/uploadcare.full.min.js">
+  </script> -->
 
 
   <!-- uploadcare -->
